<resources>
    <string name="app_name">TransportApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="starting_point_to_destination_point">Starting Point to Destination Point</string>
    <string name="starting_point">Starting Point</string>
    <string name="destination_point">Destination Point</string>
    <string name="journey">Journey</string>
    <string name="adelphi">Adelphi</string>
    <string name="ichbrae_road">Ichbrae Road</string>
    <string name="bus_stop_g7">Bus Stop (G7)</string>
    <string name="walk">Walk</string>
    <string name="bus_departure">Bus Departure</string>
    <string name="time">Time</string>
    <string name="bus_stop">Bus stop</string>
    <string name="bus_status">Bus Status</string>
    <string name="_10_mins">10 Mins</string>
    <string name="bus_number_1">Bus Number 1</string>
    <string name="_8_00_am">8:00 AM</string>
    <string name="_8_10_am">8:10 AM</string>
    <string name="_20_mins">20 Mins</string>
    <string name="local_bus_stops">Local Bus Stops</string>
    <string name="st_nicholas">St Nicholas</string>
    <string name="music_hall">Music Hall</string>
    <string name="music_hall_c2">Music Hall (C2)</string>
    <string name="music_hall_c3">Music Hall (C3)</string>
    <string name="music_hall_c4">Music Hall (C4)</string>
    <string name="saved_locations">Saved Locations</string>
    <string name="saved_location">Saved Location</string>
    <string name="union_st_to_rgu">Union St to RGU</string>
    <string name="favrouite_bus_stop">Favrouite Bus Stop</string>
    <string name="bus_1">Bus 1</string>
    <string name="duration">Duration</string>
    <string name="_40_mins">40 Mins</string>
    <string name="button">Button</string>
    <string name="saved_locations_button">saved locations</string>
    <string name="timetableButton">timetable</string>
    <string name="submitButton">submit</string>
    <string name="search_title">Search</string>
    <string name="home_page">Home page</string>
    <string name="enter_starting_point">Enter starting point</string>
    <string name="enter_destination_point">Enter destination point</string>
    <string name="localBusStop_3">#3</string>
    <string name="localBusStop_2">#2</string>
    <string name="localBusStop_1">#1</string>
    <string name="rv_local_bus_button">Button</string>
    <string name="parse_button">parse</string>
</resources>